--- a/camparameters/Camparam3.yaml
+++ b/camparameters/Camparam3.yaml
@@ -1,22 +1,18 @@
-%YAML:1.0
----
-FocalLength: 369.50417228136058
-Intrisic: !!opencv-matrix
-   rows: 3
-   cols: 3
-   dt: f
-   data: [ 369.504181, 0., 640., 0., 369.504181, 400., 0., 0., 1. ]
-Rotation: !!opencv-matrix
-   rows: 3
-   cols: 3
-   dt: f
-   data: [ -1.83697015e-16, 0.939692616, -0.342020154, -1.,
-       -1.72618737e-16, 6.28280799e-17, 0., 0.342020154, 0.939692616 ]
-Translation: !!opencv-matrix
-   rows: 3
-   cols: 1
-   dt: d
-   data: [ 0., 0., 0. ]
-CameraName: Right
-CameraIP: "192.168.45.13"
-CameraPort: 5023
+FocalLength: 472.44285460331344
+Intrisic:
+  rows: 3
+  cols: 3
+  dt: f
+  data: [472.94389, 0.0, 639.28372, 0.0, 471.94181, 400.19674, 0.0, 0.0, 1.0]
+Rotation:
+  rows: 3
+  cols: 3
+  dt: f
+  data: [0.975355, 0.003912, 0.220605, -0.208083, 0.348794, 0.913807, -0.073371, -0.937191, 0.341012]
+Translation:
+  rows: 3
+  cols: 1
+  dt: d
+  data: [53.252, 413.796, 1182.952]
+  
+  #(Right - 5023)
