--- a/camparameters/corner_warppts.yaml
+++ b/camparameters/corner_warppts.yaml
@@ -1,27 +1,5 @@
-%YAML:1.0
----
-res_size: !!opencv-matrix
-   rows: 2
-   cols: 1
-   dt: i
-   data: [ 1920, 1080 ]
-tl: !!opencv-matrix
-   rows: 2
-   cols: 1
-   dt: i
-   data: [ 0, 0 ]
-tr: !!opencv-matrix
-   rows: 2
-   cols: 1
-   dt: i
-   data: [ 1920, 0 ]
-bl: !!opencv-matrix
-   rows: 2
-   cols: 1
-   dt: i
-   data: [ 0, 1080 ]
-br: !!opencv-matrix
-   rows: 2
-   cols: 1
-   dt: i
-   data: [ 1920, 1080 ]
+res_size: [1920, 1080]
+tl: [0, 0]
+tr: [1920, 0]
+bl: [0, 1080]
+br: [1920, 1080]
